--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,44 +1,86 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito|Roboto");
+
 body {
-  background-color: #efefef;
-  margin: 20px;
+  background-color: #f5f5f5;
+  margin: 50px;
+  font-family: "Roboto", sans-serif;
 }
 
 .card {
-  margin-bottom: 10px;
-}
-
-.btn-primary {
-  background-color: #5397d1;
-}
-
-.btn-primary:disabled {
-  background-color: lightGrey;
-  border-color: grey;
+  margin-bottom: 20px;
+  border-style: none;
 }
 
 .btn {
+  border: none;
   border-radius: 14px;
+  padding: 7px 20px 7px 20px;
+}
+
+.btn:disabled {
+  opacity: 0.3;
+}
+
+.btn-link, .btn-link:active{
+  color: black;
+  text-decoration: none;
+}
+
+.btn-link:hover {
+  color: #407fc0;
+  text-decoration: none;
+}
+
+.btn-primary {
+  background-color: #5e97d1;
+}
+
+.btn-primary:hover {
+  color: #d8d8d8;
+  background-color: #407fc0;
+  box-shadow: 3px 2px 5px;
+}
+
+.btn-secondary {
+  background-color: #f5f5f5;
+  color: #d8d8d8;
+}
+
+.btn-secondary:hover {
+  background-color: #5e97d1;
+  color: white;
 }
 
 img {
   height: 100%;
 }
 
-.card .btn {
-  bottom: 5%;
-  position: absolute;
+.product-header {
+  width: 100%;
 }
 
+.card .card-title {
+  font-size: 21px;
+  font-family: "Nunito", sans-serif;
+}
 .card .card-subtitle {
-  font-size: 12px;
+  font-size: 11px;
   color: #9b9b9b;
+  text-transform: uppercase;
+  padding: 0px 0px 10px 0px;
 }
 
-.card .card-text {
+.card .price {
+  position: absolute;
+  width: 100%;
   text-align: right;
 }
 
 .cart-link-container {
   text-align: right;
   margin: auto;
+}
+
+.modal {
+  border-style: none;
 }
